objects/CN_Campaign_Product__c.object
<CustomObject>
    <fields>
        <fullName>CN_Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Name__c</fullName>
        <formula>CN_Product__r.CN_SKU_Description_CN__c</formula>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <label>Campaign Product</label>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Campaign Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Product_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED( CN_Product__c ),
NOT( CN_Product__r.IsActive )
)</errorConditionFormula>
        <errorDisplayField>CN_Product__c</errorDisplayField>
        <errorMessage>Product is inactive</errorMessage>
    </validationRules>
</CustomObject>